--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   
   theme:
     path: "./modules/theme"
+
+  widget:
+    path: "./modules/widget"
+  #
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   equatable: ^2.0.5
